[add] best-page

--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>jspractice</title>
+        <title>DUCAMI</title>
         <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet'/>
         <link rel="stylesheet" type="text/css" href="css/login.css">
         <link rel="stylesheet" type="text/css" href="css/nav.css">
@@ -12,11 +12,12 @@
         <script type="text/javascript" src="js/login.js"></script>
 
         <!-- 여기부터 네비바 -->
+        <div class="header-alarm"><a>ducami-alarmbanner</a></div>
         <div id="header"> 
             <div class="top-header">
                 <ul>
                     <li>
-                        <a href="">로그인</a>
+                        <a href="login.html">로그인</a>
                     </li>
                     <li>
                         <a href="">회원가입</a>
@@ -47,7 +48,7 @@
                         <a>전체 카테고리</a>
                     </li>
                     <li>
-                        <a href="ducami-hot.html">베스트</a>
+                        <a href="ducami-best.html">베스트</a>
                     </li>
                     <li>
                         <a>오프라인 강의</a>
